CHANGES.txt - 12/06/1999
------------------------

CHANGES IN HTMLDOC v1.8.3

    NEW FEATURES

	- New "--browserwidth" option to control scaling of images and
	  tables that use fixed pixel widths.

    CHANGES

	- The configure script now looks for the OpenGL library
	  (required if you use a shared FLTK library with OpenGL
	  support.)

    BUG FIXES

	- Page break comments didn't force a paragraph break.
	- --no-toc prevented chapters from being output in PS
	  and PDF files.
	- Filenames didn't always get updated properly when doing a
	  "save as"...
	- Fixed some more leading/trailing whitespace problems.


CHANGES IN HTMLDOC v1.8.2

    NEW FEATURES

	- New "setup" program for UNIX software installation.

    CHANGES

	- Documentation updated for new UNIX "setup" program and
	  "..." usage for headers and footers.
	- Changed margins to floating point (instead of integer) to
	  improve table column accuracy.

    BUG FIXES

	- HTMLDOC could crash under Microsoft Windows with some
	  types of HTML files.  This was caused by a stack overflow,
	  usually when processing nested tables.
	- Multiple HTML files weren't being converted properly in
	  web page mode - only the last file would be generated for
	  PostScript output, and no file for PDF output.
	- Wasn't preserving the whitespace between "one" and "two"
	  in the HTML code "one<I> two</I> three".
	- Paragraph spacing was inconsistent.
	- <TABLE WIDTH="xx"> wasn't formatted properly.
	- The command-line code wasn't opening HTML files in binary
	  mode. This caused problems under Microsoft Windows.


CHANGES IN HTMLDOC v1.8.1

    CHANGES

	- The configure script didn't update the ARFLAGS
	  variable for *BSD operating systems (no "s" option to
	  build the symbol table...)
	- Changed the installation commands to only create the
	  installation directory if it does not exist.  This
	  prevents installation errors on some platforms the
	  second time around.