@@ -1,5 +1,5 @@
 dnl
-dnl "$Id: configure.in,v 1.11 1999/12/08 17:03:35 mike Exp $"
+dnl "$Id: configure.in,v 1.12 1999/12/13 16:12:03 mike Exp $"
 dnl
 dnl   Configuration script for HTMLDOC, an HTML document processing program.
 dnl
@@ -113,7 +113,7 @@ else
         	IRIX*)
 			if test -z "$OPTIM"; then
 				if test `uname -r | sed -e '1,$s/\.//g'` -ge 62; then
-					OPTIM="-O3 -OPT:Olimit=4000"
+					OPTIM="-O2 -OPT:Olimit=4000"
         			else
 					OPTIM="-O2"
 				fi
@@ -137,5 +137,5 @@ dnl Generate the top-level Makefile and Makedefs file...
 AC_OUTPUT(Makedefs Makefile)
 
 dnl
-dnl End of "$Id: configure.in,v 1.11 1999/12/08 17:03:35 mike Exp $".
+dnl End of "$Id: configure.in,v 1.12 1999/12/13 16:12:03 mike Exp $".
 dnl
